--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 <div class="container">
   <h1>Выберите предмет</h1>
-  <a class="button" onclick="startTest('db')">База данных</a>
-  <a class="button" onclick="startTest('engl')">Англиский</a>
-  <a class="button" onclick="startTest('ws')">Zero-код</a>
+  <a class="button" onclick="startTest('db')">Кәсіпкерлік</a>
+<!--   <a class="button" onclick="startTest('engl')">Англиский</a>
+  <a class="button" onclick="startTest('ws')">Zero-код</a> -->
 </div>
   <script>
     function startTest(subject) {
