--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <h1>Выберите предмет</h1>
-  <a class="button" onclick="startTest('db')">Сеть</a>
+  <a class="button" onclick="startTest('db')">Академка</a>
 <!--   <a class="button" onclick="startTest('engl')">Англиский</a>
   <a class="button" onclick="startTest('ws')">Zero-код</a> -->
 </div>
