--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <div class="container">
-  <h1>Выберите предмет</h1>
-  <a class="button" onclick="startTest('db')">Академка</a>
+  <h1>Последний босс</h1>
+  <a class="button" onclick="startTest('db')">База Данных</a>
 <!--   <a class="button" onclick="startTest('engl')">Англиский</a>
   <a class="button" onclick="startTest('ws')">Zero-код</a> -->
 </div>
