Update heading text in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <h1>Последний босс</h1>
+  <h1>Еще одна сессия плак плак</h1>
   <a class="button" onclick="startTest('db')">База Данных</a>
 <!--   <a class="button" onclick="startTest('engl')">Англиский</a>
   <a class="button" onclick="startTest('ws')">Zero-код</a> -->
