Update buttons in index.html
Comment out English and Zero-code buttons, add Zen button.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <div class="container">
   <h1>Еще одна сессия плак плак</h1>
   <a class="button" onclick="startTest('oob')">ООП</a>
-<!--   <a class="button" onclick="startTest('engl')">Англиский</a>
-  <a class="button" onclick="startTest('ws')">Zero-код</a> -->
+<!-- <!--   <a class="button" onclick="startTest('engl')">Англиский</a> -->
+  <a class="button" onclick="startTest('zen')">Зияткерлик</a> -->
 </div>
   <script>
     function startTest(subject) {
