--- a/index.html
+++ b/index.html
@@ -12,11 +12,17 @@
   <a class="button" onclick="startTest('oob')">ООП</a>
 <!-- <!--   <a class="button" onclick="startTest('engl')">Англиский</a> -->
   <a class="button" onclick="startTest('zen')">Зияткерлик</a> -->
+
+  <a class="button" onclick="openFlashcards('datamining')">Data Mining (карточки)</a>
+  
 </div>
   <script>
     function startTest(subject) {
       window.location.href = `test.html?subject=${subject}`;
     }
+    function openFlashcards(subject) {
+    window.location.href = `card.html?subject=${subject}`;
+  }
   </script>
 </body>
 </html>
