--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <a class="button" onclick="startTest('oob')">ООП</a>
 <!-- <!--   <a class="button" onclick="startTest('engl')">Англиский</a> -->
   <a class="button" onclick="startTest('zen')">Зияткерлик</a> -->
+  <a class="button" onclick="startTest('crypto')">Крипто(debug)</a> -->
 
   <a class="button" onclick="openFlashcards('datamining')">Data Mining (карточки)</a>
   
