--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
   <h1>Еще одна сессия плак плак</h1>
   <a class="button" onclick="startTest('oob')">ООП</a>
-<!-- <!--   <a class="button" onclick="startTest('engl')">Англиский</a> -->
+  <a class="button" onclick="startTest('engl')">Англиский</a>
   <a class="button" onclick="startTest('zen')">Зияткерлик</a> -->
   <a class="button" onclick="startTest('crypto')">Крипто(debug)</a> -->
 
