--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <div class="container">
   <h1>Еще одна сессия плак плак</h1>
-  <a class="button" onclick="startTest('oob')">ООП</a>
-  <a class="button" onclick="startTest('engl')">Англиский</a>
-  <a class="button" onclick="startTest('zen')">Зияткерлик</a> -->
-  <a class="button" onclick="startTest('crypto')">Крипто(без комментариев)</a> -->
+  <!-- <a class="button" onclick="startTest('oob')">ООП</a> -->
+  <!-- <a class="button" onclick="startTest('engl')">Англиский</a> -->
+  <a class="button" onclick="startTest('zen')">Зияткерлик</a>
+  <a class="button" onclick="startTest('crypto')">Крипто</a>
 
-  <a class="button" onclick="openFlashcards('datamining')">Data Mining (карточки)</a>
+  <!-- <a class="button" onclick="openFlashcards('datamining')">Data Mining (карточки)</a> -->
   
 </div>
   <script>
